Add support devices to README (by Martin Michlmayr)
git-svn-id: http://qcontrol.googlecode.com/svn/trunk@26 cba486c8-e04f-0410-a7e3-79bda13a29fb

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 see http://qnap.nas-central.org/index.php/PIC_Control_Software
+
+Supported devices:
+ - QNAP TS-109, TS-109 II, TS-209 and TS-209 II (ts209)
+ - QNAP TS-409 and TS-409U (ts409)
+ - QNAP TS-110, TS-119, TS-210, TS-219 and TS-219P (ts219)
+ - QNAP TS-410, TS-410U, TS-419P and TS-419U (ts41x)
+
