Update link in README
git-svn-id: http://qcontrol.googlecode.com/svn/trunk@31 cba486c8-e04f-0410-a7e3-79bda13a29fb

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-see http://qnap.nas-central.org/index.php/PIC_Control_Software
+see http://code.google.com/p/qcontrol/
 
 Supported devices:
  - QNAP TS-109, TS-109 II, TS-209 and TS-209 II (ts209)
