README: Updated URL

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-see http://code.google.com/p/qcontrol/
+see https://gitorious.org/qcontrol/
 
 Supported devices:
  - QNAP TS-109, TS-109 II, TS-209 and TS-209 II (ts209)
