Add support for Synology Diskstation and Rackstation NASes
Add support for the Synology Diskstation and Rackstation NASes that
use a PIC on /dev/ttyS1 to control LEDs and power and to detect
button events.

This does not expose all of the features available - only those common
to most models.

Signed-off-by: Ben Peddell <klightspeed@killerwolves.net>
Tested-by: Ben Peddell <klightspeed@killerwolves.net>
Signed-off-by: Ian Campbell <ijc@hellion.org.uk>

--- a/README
+++ b/README
@@ -5,4 +5,5 @@ Supported devices:
  - QNAP TS-409 and TS-409U (ts409)
  - QNAP TS-110, TS-119, TS-210, TS-219 and TS-219P (ts219)
  - QNAP TS-410, TS-410U, TS-419P and TS-419U (ts41x)
+ - Synology Diskstation and Rackstation (synology)
 
