--- a/README
+++ b/README
@@ -3,7 +3,7 @@ see https://gitorious.org/qcontrol/
 Supported devices:
  - QNAP TS-109, TS-109 II, TS-209 and TS-209 II (ts209)
  - QNAP TS-409 and TS-409U (ts409)
- - QNAP TS-110, TS-119, TS-210, TS-219 and TS-219P (ts219)
- - QNAP TS-410, TS-410U, TS-419P and TS-419U (ts41x)
+ - QNAP TS-11x, TS-12x, HS-210, TS-21x and TS-22x (ts219)
+ - QNAP TS-41x and TS-42x (ts41x)
  - Synology Diskstation and Rackstation (synology)
 
